# Guardian-Mesh-Low-Latency-AI-Safety-Gateway-

./: README.md
gateway/: .env  .gitignore  Cargo.toml  build.rs  database_migration.md  docker-compose.yml  gateway_info.md
gateway/configs/: defaults.yaml
gateway/migration/src/: m20220101_000001_create_table.rs
gateway/src/: main.rs
gateway/src/entities/: bad_prompt.rs  mod.rs  prelude.rs  user.rs
gateway/src/handlers/: health.rs  home.rs  invoke.rs  mod.rs  schemas.rs  user_handlers.rs
gateway/src/handlers/auth_handlers/: login_handler.rs  mod.rs  register_handler.rs
gateway/src/handlers/prompt_hadlers/: mod.rs  prompt_hadler.rs
gateway/src/models/: mod.rs  user_models.rs
gateway/src/routes/: auth_route.rs  chat.rs  mod.rs  prompt_router.rs  user_route.rs
gateway/src/server/: mod.rs
gateway/src/services/: llm_client.rs  llm_service.rs  mod.rs  ner_client.rs
gateway/src/utils/: config.rs  constants.rs  errors.rs  guards.rs  jwt.rs  logging.rs  mod.rs  password.rs  read_env.rs  schema.rs
gateway/tests/: quick_dev.rs
ml_service/: .gitignore  main.py  ml_server_proto.proto  ml_server_proto_pb2.py  ml_server_proto_pb2_grpc.py  pyproject.toml  train.py
ml_service/classification/: load_model.py
ml_service/configs/: defaults.yaml
ml_service/configs/logging/: app.yaml
ml_service/data/raw/test/: state.json
ml_service/data/raw/train/: cache-15ea6f0e48f71b6a.arrow  cache-f0b80c5cedf27def.arrow  dataset_info.json  state.json
ml_service/data/raw/validation/: state.json
ml_service/models/train/: training_script.py
ml_service/models/training/: dataset_setup.py  model_setup.py
ml_service/models/training_setup/: dataset_setup.py  model_setup.py  trainer.py  training_parm.py
ml_service/notebook/: exp01.ipynb  exp02.ipynb
ml_service/utils/: __init__.py
ner_service/: main.py  model.py  ner_proto_pb2.py  ner_proto_pb2_grpc.py  pyproject.toml
ner_service/utils/: __init__.py  handle_config.py  handle_logging.py
proto/: ner_proto.proto
