[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "migration"]

[dependencies]
migration = { path = "migration" }

sea-orm = { version = "2.0.0-rc.38", features = ["sqlx-postgres", "runtime-tokio-rustls"] }

axum = "0.8.9"
serde_json = "1.0.149"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.10", features = ["cors"] }
