[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "migration"]

[dependencies]
migration = { path = "migration" }


sea-orm = { version = "2.0.0-rc.38", features = ["sqlx-postgres", "runtime-tokio-rustls"] }

axum = "0.8.9"
serde_json = "1.0.149"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.10", features = ["cors"] }
lazy_static = "1.5.0"
dotenv = "0.15.0"

tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
serde = { version = "1.0.228", features = ["derive"] }
chrono = "0.4.44"
uuid = { version = "1.23.1", features = ["v4"] }
argon2 = "0.5.3"
validator = { version = "0.20.0", features = ["derive"] }
jsonwebtoken = { version = "10.4.0", features = ["aws_lc_rs"] }


[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
