[project]
name = "ml-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.4",
    "dotenv>=0.9.9",
    "evaluate>=0.4.6",
    "grpcio-tools>=1.80.0",
    "huggingface-hub>=1.12.0",
    "hydra-core>=1.3.2",
    "ipykernel>=7.2.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "python-json-logger>=4.1.0",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "transformers>=5.6.2",
]
